# dspy-study

./: .gitignore  advanced_tool_use.ipynb  advanced_tool_use_solar.ipynb  building-ai-agents-with-dspy-custom-module.py  building-ai-agents-with-dspy.py  main.py  optimized_gpt4o.json  optimized_rag.json  optimized_solar2.json  pyproject.toml  rag.ipynb  rag_agent.ipynb  retrieval-augmented-generation.py
