[project]
name = "dspy-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dspy",
    "faiss-cpu>=1.11.0",
    "groq>=0.30.0",
    "ipykernel>=6.29.5",
    "math-equivalence",
    "mlflow>=3.1.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.3",
]

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pylsp-mypy]
overrides = ["--ignore-missing-imports"]

[tool.mypy]
ignore_missing_imports = true

[tool.uv.sources]
dspy = { git = "https://github.com/stanfordnlp/dspy.git" }
math-equivalence = { git = "https://github.com/hendrycks/math.git" }
